# customer-support-ai

./: .env.example  .gitignore  README.md  customer_support_ai.db-journal  pyproject.toml
app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
app/agents/: factory.py  llm.py  support.py
app/mailbox/: base.py  factory.py  fake.py  gmail.py  mailslurp.py
app/services/: ingestion.py  ticketing.py
app/static/: styles.css
app/templates/: base.html  ticket_detail.html  tickets.html
docs/: ARCHITECTURE.md  DEMO.md  PROJECT_PLAN.md
tests/: test_agents.py  test_gmail.py  test_ingestion.py  test_mailslurp.py
